260201 front 폼 타입에서 any타입 제거, backend 공통코드, 코드라벨 로직 정리.